--- a/SteppersControlApp/SteppersControlCore/SteppersControlCore.csproj
+++ b/SteppersControlApp/SteppersControlCore/SteppersControlCore.csproj
@@ -44,15 +44,20 @@
     <Compile Include="CommunicationProtocol\AbstractCommand.cs" />
     <Compile Include="CommunicationProtocol\AdditionalCommands\AbortExecutionCommand.cs" />
     <Compile Include="CommunicationProtocol\AdditionalCommands\SetDeviceStateCommand.cs" />
+    <Compile Include="CommunicationProtocol\AdditionalCommands\WaitSensorValueCommand.cs" />
+    <Compile Include="CommunicationProtocol\AdditionalCommands\WaitTimeCommand.cs" />
     <Compile Include="CommunicationProtocol\CncCommands\HomeCncCommand.cs" />
     <Compile Include="CommunicationProtocol\CncCommands\MoveCncCommand.cs" />
     <Compile Include="CommunicationProtocol\CncCommands\OffDeviceCncCommand.cs" />
     <Compile Include="CommunicationProtocol\CncCommands\OnDeviceCncCommand.cs" />
     <Compile Include="CommunicationProtocol\CncCommands\SetSpeedCncCommand.cs" />
-    <Compile Include="CommunicationProtocol\ICommand.cs" />
-    <Compile Include="CommunicationProtocol\Responses\BadFormatResponse.cs" />
+    <Compile Include="CommunicationProtocol\IAbstractCommand.cs" />
+    <Compile Include="CommunicationProtocol\IDeviceCommand.cs" />
+    <Compile Include="CommunicationProtocol\IHostCommand.cs" />
+    <Compile Include="CommunicationProtocol\Responses\AbstaractResponse.cs" />
     <Compile Include="CommunicationProtocol\Responses\DebugResponse.cs" />
     <Compile Include="CommunicationProtocol\Responses\CommandStateResponse.cs" />
+    <Compile Include="CommunicationProtocol\Responses\SensorsValuesResponse.cs" />
     <Compile Include="CommunicationProtocol\SendPacket.cs" />
     <Compile Include="CommunicationProtocol\StepperCommands\GoUntilCommand.cs" />
     <Compile Include="CommunicationProtocol\StepperCommands\MoveCommand.cs" />
@@ -60,7 +65,6 @@
     <Compile Include="CommunicationProtocol\StepperCommands\SetSpeedCommand.cs" />
     <Compile Include="CommunicationProtocol\StepperCommands\StopCommand.cs" />
     <Compile Include="Configuration.cs" />
-    <Compile Include="Device.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="CommunicationProtocol\Protocol.cs" />
     <Compile Include="CommunicationProtocol\Responses\SteppersStatesResponse.cs" />
@@ -73,7 +77,6 @@
     <Compile Include="SerialCommunication\SerialHelper.cs" />
     <Compile Include="Core.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Stepper.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
