--- a/stepper_control_mega2560/platformio.ini
+++ b/stepper_control_mega2560/platformio.ini
@@ -14,3 +14,5 @@ board = megaatmega2560
 framework = arduino
 lib_deps =
     https://github.com/Megunolink/powerSTEP01_Arduino_Library
+
+build_flags = -O
