--- a/SteppersControlApp/SteppersControlApp/SteppersControlApp.csproj
+++ b/SteppersControlApp/SteppersControlApp/SteppersControlApp.csproj
@@ -63,7 +63,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="OldSerialHelper.cs" />
     <Compile Include="Utils\InvokeHelper.cs" />
     <Compile Include="Views\CNCView.cs">
       <SubType>UserControl</SubType>
@@ -107,6 +106,12 @@
     <Compile Include="Views\SteppersGridView.Designer.cs">
       <DependentUpon>SteppersGridView.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\StepperTurningView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Views\StepperTurningView.Designer.cs">
+      <DependentUpon>StepperTurningView.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\ViewStyler.cs" />
     <EmbeddedResource Include="ControlPanelForm.resx">
       <DependentUpon>ControlPanelForm.cs</DependentUpon>
@@ -143,6 +148,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\SteppersGridView.resx">
       <DependentUpon>SteppersGridView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\StepperTurningView.resx">
+      <DependentUpon>StepperTurningView.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
