--- a/SteppersControlApp/SteppersControlCore/SteppersControlCore.csproj
+++ b/SteppersControlApp/SteppersControlCore/SteppersControlCore.csproj
@@ -63,7 +63,7 @@
     <Compile Include="CommunicationProtocol\Responses\SensorsValuesResponse.cs" />
     <Compile Include="CommunicationProtocol\SendPacket2.cs" />
     <Compile Include="CommunicationProtocol\SendPacket.cs" />
-    <Compile Include="CommunicationProtocol\StepperCommands\GoUntilCommand.cs" />
+    <Compile Include="CommunicationProtocol\StepperCommands\HomeCommand.cs" />
     <Compile Include="CommunicationProtocol\StepperCommands\MoveCommand.cs" />
     <Compile Include="CommunicationProtocol\StepperCommands\RunCommand.cs" />
     <Compile Include="CommunicationProtocol\StepperCommands\SetSpeedCommand.cs" />
