--- a/SteppersControlApp/SteppersControlCore/SteppersControlCore.csproj
+++ b/SteppersControlApp/SteppersControlCore/SteppersControlCore.csproj
@@ -68,8 +68,8 @@
     <Compile Include="CommunicationProtocol\StepperCommands\SetSpeedCommand.cs" />
     <Compile Include="CommunicationProtocol\StepperCommands\StopCommand.cs" />
     <Compile Include="Configuration.cs" />
-    <Compile Include="ControllersProperties\ArmControllerProperties.cs" />
-    <Compile Include="ControllersProperties\LoadControllerProperties.cs" />
+    <Compile Include="ControllersProperties\NeedleControllerProperties.cs" />
+    <Compile Include="ControllersProperties\ChargeControllerProperties.cs" />
     <Compile Include="ControllersProperties\PompControllerProperties.cs" />
     <Compile Include="ControllersProperties\RotorControllerProperties.cs" />
     <Compile Include="ControllersProperties\TransporterControllerProperties.cs" />
@@ -95,8 +95,8 @@
     <Compile Include="Core.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\ControllerBase.cs" />
-    <Compile Include="Controllers\ArmController.cs" />
-    <Compile Include="Controllers\LoadController.cs" />
+    <Compile Include="Controllers\NeedleController.cs" />
+    <Compile Include="Controllers\ChargeController.cs" />
     <Compile Include="Controllers\PompController.cs" />
     <Compile Include="Controllers\RotorController.cs" />
     <Compile Include="Controllers\TransporterController.cs" />
