--- a/AnalyzerControlApp/AnalyzerConfiguration/AnalyzerConfiguration.csproj
+++ b/AnalyzerControlApp/AnalyzerConfiguration/AnalyzerConfiguration.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -42,15 +45,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AnalyzerAppConfiguration.cs" />
-    <Compile Include="ControllersConfiguration\ChargeControllerConfiguration.cs" />
-    <Compile Include="ControllersConfiguration\DemoControllerConfiguration.cs" />
+    <Compile Include="ConfigurationHelper.cs" />
+    <Compile Include="JsonConfigurationProvider.cs" />
+    <Compile Include="UnitsConfiguration\ChargerConfiguration.cs" />
+    <Compile Include="DemoControllerConfiguration.cs" />
     <Compile Include="IConfigurationProvider.cs" />
-    <Compile Include="ControllersConfiguration\NeedleControllerConfiguration.cs" />
-    <Compile Include="ControllersConfiguration\PompControllerConfiguration.cs" />
-    <Compile Include="ControllersConfiguration\RotorControllerConfiguration.cs" />
-    <Compile Include="ControllersConfiguration\TransporterControllerConfiguration.cs" />
+    <Compile Include="UnitsConfiguration\NeedleConfiguration.cs" />
+    <Compile Include="UnitsConfiguration\PompConfiguration.cs" />
+    <Compile Include="UnitsConfiguration\RotorConfiguration.cs" />
+    <Compile Include="UnitsConfiguration\ConveyorConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XmlConfigurationProvider.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
