--- a/AnalyzerControlApp/AnalyzerCommunication/AnalyzerCommunication.csproj
+++ b/AnalyzerControlApp/AnalyzerCommunication/AnalyzerCommunication.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SerialCommunication\ByteStuffing.cs" />
     <Compile Include="SerialCommunication\IPacketFinder.cs" />
+    <Compile Include="SerialCommunication\IPacketHandler.cs" />
     <Compile Include="SerialCommunication\ISerialAdapter.cs" />
     <Compile Include="SerialCommunication\PacketFinder.cs" />
     <Compile Include="SerialCommunication\PacketHandler.cs" />
