--- a/AnalyzerControlApp/AnalyzerCommunication/AnalyzerCommunication.csproj
+++ b/AnalyzerControlApp/AnalyzerCommunication/AnalyzerCommunication.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnalyzerContext.cs" />
     <Compile Include="CommunicationProtocol\AbstractCommand.cs" />
     <Compile Include="CommunicationProtocol\AdditionalCommands\AbortExecutionCommand.cs" />
     <Compile Include="CommunicationProtocol\AdditionalCommands\BarStartCommand.cs" />
@@ -66,6 +67,7 @@
     <Compile Include="CommunicationProtocol\StepperCommands\RunCommand.cs" />
     <Compile Include="CommunicationProtocol\StepperCommands\SetSpeedCommand.cs" />
     <Compile Include="CommunicationProtocol\StepperCommands\StopCommand.cs" />
+    <Compile Include="IAnalyzerContext.cs" />
     <Compile Include="ICommand.cs" />
     <Compile Include="CommunicationProtocol\Protocol.cs" />
     <Compile Include="CommunicationProtocol\SendPacket.cs" />
@@ -79,9 +81,6 @@
     <Compile Include="SerialCommunication\PacketFinder.cs" />
     <Compile Include="SerialCommunication\PacketHandler.cs" />
     <Compile Include="SerialCommunication\SerialAdapter.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="CommunicationClassDiagram.cd" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj">
