--- a/AnalyzerControlApp/AnalyzerDomain/AnalyzerDomain.csproj
+++ b/AnalyzerControlApp/AnalyzerDomain/AnalyzerDomain.csproj
@@ -4,15 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C75697AB-D456-44EB-86A4-A1C23BC776EC}</ProjectGuid>
+    <ProjectGuid>{17D7A05E-C6D1-4892-B92A-FB3741AB588F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AnalyzerControlCore</RootNamespace>
-    <AssemblyName>AnalyzerControlCore</AssemblyName>
+    <RootNamespace>AnalyzerDomain</RootNamespace>
+    <AssemblyName>AnalyzerDomain</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -42,35 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DemoController.cs" />
-    <Compile Include="MachineControl\ParserRegexes.cs" />
-    <Compile Include="MachineControl\ICommandExecutor.cs" />
-    <Compile Include="MachineControl\CommandExecutor.cs" />
-    <Compile Include="MachineControl\CommandParser.cs" />
-    <Compile Include="MachineControl\TaskExecutor.cs" />
-    <Compile Include="AnalyzerGateway.cs" />
+    <Compile Include="Models\Analysis.cs" />
+    <Compile Include="Models\AnalysisStage.cs" />
+    <Compile Include="Models\AnalysisType.cs" />
+    <Compile Include="Models\Cartridge.cs" />
+    <Compile Include="Models\CartridgeModel.cs" />
+    <Compile Include="Models\Patient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Units\UnitBase.cs" />
-    <Compile Include="Units\NeedleUnit.cs" />
-    <Compile Include="Units\ChargerUnit.cs" />
-    <Compile Include="Units\PompUnit.cs" />
-    <Compile Include="Units\RotorUnit.cs" />
-    <Compile Include="Units\ConveyorUnit.cs" />
-    <Compile Include="Utils\RegexHelper.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\AnalyzerCommunication\AnalyzerCommunication.csproj">
-      <Project>{995b3702-b9dc-45b6-91ea-5cccc7aec7ce}</Project>
-      <Name>AnalyzerCommunication</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\AnalyzerConfiguration\AnalyzerConfiguration.csproj">
-      <Project>{33e1fe15-0dde-4efb-8359-cd035c95e16d}</Project>
-      <Name>AnalyzerConfiguration</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj">
-      <Project>{6dcff691-ffbb-45b4-90a9-36806ae27d02}</Project>
-      <Name>Infrastructure</Name>
-    </ProjectReference>
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
