Added ?Invoke test in PacketHandler. Removed locking from CommandExecutor's members getters and setters. Change ConveyorCells.Initialize() to Enumerable.Repeat() array generation in DemoController. Upgrade VERISON in system.hpp and uncomment EMULATOR definition. Fix wrong #ifndef DEBUG to #ifdef DEBUG in bar_scanner.cpp.

--- a/AnalyzerControlApp/PresentationWinForms/PresentationWinForms.csproj
+++ b/AnalyzerControlApp/PresentationWinForms/PresentationWinForms.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>PresentationWinForms</RootNamespace>
     <AssemblyName>PresentationWinForms</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
@@ -38,6 +38,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>7.2</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -47,6 +48,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>7.2</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>
