--- a/AnalyzerControlApp/PresentationWinForms/packages.config
+++ b/AnalyzerControlApp/PresentationWinForms/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Autoupdater.NET.Official" version="1.5.8" targetFramework="net461" />
   <package id="FCTB" version="2.16.24" targetFramework="net461" />
+  <package id="WindowsBase" version="4.6.1055.0" targetFramework="net48" />
 </packages>
